--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,159 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/11.0.2/firebase-database-compat.js"></script>
+    <!-- 引入 FontAwesome -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+      rel="stylesheet"
+    />
+
+    <style>
+      body {
+        font-family: "Arial", sans-serif;
+        background-color: #f8f9fa;
+      }
+      .container {
+        background-color: #ffffff;
+        padding: 30px;
+        border-radius: 15px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      }
+      h1 {
+        font-size: 2rem;
+        color: #343a40;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+      }
+
+      .h1-title {
+        font-size: 2rem;
+        color: #343a40;
+      }
+
+      .btn-group {
+        display: flex;
+        gap: 4px;
+      }
+
+      .btn-group .btn {
+        flex: 1;
+      }
+
+      .btn {
+        transition: all 0.3s ease;
+      }
+
+      .btn:hover {
+        transform: scale(1.05);
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      }
+
+      #actionSection {
+        margin-top: 20px;
+      }
+      #result {
+        margin-top: 20px;
+      }
+      .result-box {
+        background-color: #f1f3f5;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      }
+      .modal-dialog {
+        max-width: 500px;
+      }
+      .modal-content {
+        border-radius: 10px;
+      }
+      .modal-header {
+        border-bottom: 1px solid #e9ecef;
+      }
+      .form-label {
+        font-weight: bold;
+      }
+      .form-control {
+        border-radius: 10px;
+      }
+      #restaurantsList a {
+        text-decoration: none;
+      }
+      #restaurantsList a:hover {
+        text-decoration: underline;
+      }
+
+      /* 样式化餐厅列表的卡片 */
+      .restaurant-card {
+        background-color: #ffffff;
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        padding: 15px;
+        margin-bottom: 15px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .restaurant-card .info {
+        max-width: 75%;
+      }
+
+      .restaurant-card .btn-view-map {
+        background-color: #007bff;
+        color: white;
+        padding: 10px;
+        border-radius: 5px;
+        text-decoration: none;
+      }
+
+      .restaurant-card .btn-view-map:hover {
+        background-color: #0056b3;
+      }
+
+      /* 响应式设计 */
+      @media (max-width: 768px) {
+        h1 {
+          font-size: 1.5rem;
+        }
+
+        .btn-group .btn {
+          width: 100%;
+        }
+
+        #actionSection button,
+        #listRestaurants button {
+          width: 100%;
+        }
+        .result-box {
+          padding: 15px;
+        }
+        .modal-dialog {
+          max-width: 90%;
+        }
+      }
+
+      @media (max-width: 480px) {
+        h1 {
+          font-size: 1.25rem;
+        }
+        .result-box {
+          padding: 10px;
+        }
+        .modal-content {
+          border-radius: 8px;
+        }
+      }
+    </style>
   </head>
   <body>
     <div class="container mt-5">
-      <div class="float-end">
+      <!-- 新增店家按鈕 -->
+      <div class="d-flex justify-content-center mb-4">
         <button
-          class="btn btn-success"
+          class="btn btn-outline-secondary"
           data-bs-toggle="modal"
           data-bs-target="#addRestaurantModal"
         >
@@ -24,32 +171,41 @@
         </button>
       </div>
 
-      <!-- 選擇餐點類別 -->
-      <h1 class="text-center">
-        寶鼻!叫
-        <button id="breakfastButton" class="btn btn-secondary">早餐</button>
-        <button id="dinnerButton" class="btn btn-secondary">晚餐</button>
+      <!-- 选择餐点类别 -->
+      <h1>
+        <span class="h1-title">寶鼻!叫</span>
+        <div class="btn-group">
+          <button id="breakfastButton" class="btn btn-secondary">早餐</button>
+          <button id="dinnerButton" class="btn btn-secondary">晚餐</button>
+        </div>
       </h1>
 
       <!-- 隨機選擇 -->
       <div class="text-center mt-4 d-none" id="actionSection">
         <button id="randomButton" class="btn btn-primary">隨機選擇餐點</button>
       </div>
+
       <!-- 顯示結果 -->
-      <div class="mt-4 text-center" id="result">
-        <h3 id="restaurantName"></h3>
-        <p id="restaurantCategory"></p>
-        <a id="googleMapLink" href="#" target="_blank"></a>
+      <div class="mt-4 text-center d-none" id="result">
+        <div class="result-box">
+          <h3 id="restaurantName" class="mt-3"></h3>
+          <p id="restaurantCategory"></p>
+        </div>
       </div>
-      <div class="d-flex justify-content-center mt-3">
+
+      <div
+        class="d-flex justify-content-center mt-3 d-none"
+        id="listRestaurants"
+      >
         <button id="listRestaurantsButton" class="btn btn-secondary">
           列出餐廳
         </button>
       </div>
+
       <!-- 顯示餐廳名稱的區域 -->
       <div id="restaurantsList" class="mt-4 text-center"></div>
 
-      <!-- 新增店家 -->
+      <!-- 新增店家 Modal -->
     </div>
 
     <!-- Modal -->
