--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>餐點決定器</title>
+    <title>今天要吃什麼</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -159,9 +159,9 @@
     </style>
   </head>
   <body>
-    <div class="container mt-5">
+    <div class="container mt-5 mb-5">
       <!-- 新增店家按鈕 -->
-      <div class="d-flex justify-content-center mb-4">
+      <div class="d-flex justify-content-end mb-4">
         <button
           class="btn btn-outline-secondary"
           data-bs-toggle="modal"
