--- a/public/index.html
+++ b/public/index.html
@@ -161,7 +161,7 @@
   <body>
     <div class="container mt-5 mb-5">
       <!-- 新增店家按鈕 -->
-      <div class="d-flex justify-content-end mb-4">
+      <div class="d-flex justify-content-center mb-4">
         <button
           class="btn btn-outline-secondary"
           data-bs-toggle="modal"
